--- a/config/database.yml
+++ b/config/database.yml
@@ -23,21 +23,21 @@ default: &default
 
 development:
   <<: *default
-  database: broken-consort-server-2_development
+  database: broken-consort-server_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: broken-consort-server-2
+  username: mbarry
 
   # The password associated with the postgres role (username).
-  #password:
+  password: bees
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  # host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: broken-consort-server-2_test
+  database: broken-consort-server_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: broken-consort-server-2_production
-  username: broken-consort-server-2
+  database: broken-consort-server_production
+  username: broken-consort-server
   password: <%= ENV['BROKEN-CONSORT-SERVER-2_DATABASE_PASSWORD'] %>
